[main-private] using virtual threads for executor service tasks